Bug 150380 - Calc crash when clicking on the title of the Border Color toolbar popdown
Summary: Calc crash when clicking on the title of the Border Color toolbar popdown
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: x86-64 (AMD64) All
: high critical
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0 target:7.5.1 target:7.4.6
Keywords: haveBacktrace
Depends on:
Blocks: Toolbars-Overflow Calc-Toolbars Crash
  Show dependency treegraph
 
Reported: 2022-08-12 09:33 UTC by M. Aaron Jones
Modified: 2023-03-08 15:11 UTC (History)
4 users (show)

See Also:
Crash report or crash signature: ["vcl::Window::ImplSetFrameParent(vcl::Window const *)"]


Attachments
Screenshot of steps (264.03 KB, image/png)
2022-08-27 19:22 UTC, M. Aaron Jones
Details
GDB trace of crash (24.30 KB, text/plain)
2023-01-30 11:36 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description M. Aaron Jones 2022-08-12 09:33:57 UTC
Description:
The formatting toolbar view must be enabled. The window width must be narrow enough that all of the cell border formatting icons (borders, border style, border color, and conditional) are behind the right carrot arrow. When selecting the right carrot arrow on the formatting toolbar a 2x3 gray (theme color) UI box will appear with all of the hidden border formatting icons on it. Now, select border color carrot and then click on the 2x3 gray (theme color) UI box that contains the border icons (not the border color window) but not any icon itself (typically just to the right of the border colors icon). At this point, nothing should happen. The border color UI window and the 2x3 UI box should both still be open. The final step is selecting the border color UI window title bar (not any color). The window should crash as soon as you click.

Steps to Reproduce:
1.Enable the formatting toolbar view.
2.Decrease the window width until the border formatting icons disappear behind a carrot.
3.Click the carrot, and a 2x3 UI box should appear.
4.Click the border color carrot.
5.Click within the 2x3 UI box but not on another icon.
5b. At this point nothing should have happened. The border color window should still be open.
6.Click on the border color window title.

Actual Results:
Every LibreOffice window crashes.

Expected Results:
Nothing, or possible kept the border color window open.


Reproducible: Always


User Profile Reset: No


OpenGL enabled: Yes

Additional Info:
Version: 7.2.0.4 (x64) / LibreOffice Community
Build ID: 9a9c6381e3f7a62afc1329bd359cc48accb6435b
CPU threads: 16; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL
Comment 1 M. Aaron Jones 2022-08-12 09:41:39 UTC
EDIT: There is no need to select the 2x3 UI box after selecting the border color window. Skipping that step and clicking on the border color UI window title bar right away will still cause the crash.

The other border formatting icons do not need to be hidden as well. Only the border color formatting icon needs to be behind the carrot.
Comment 2 Roman Kuznetsov 2022-08-12 19:06:10 UTC
Please try update your LibreOffice to current 7.3.5 version and the try repeat your problem

Do you use some Tabbed UI variant?
Comment 3 M. Aaron Jones 2022-08-12 19:14:47 UTC
I have no add-ons or variants of toolbars installed. I'm using the stock software.
Comment 4 M. Aaron Jones 2022-08-12 19:27:20 UTC
I have just updated to the most recent version of LibreOffice, and the crash is still there. Follow the same steps. new crash report: 
https://crashreport.libreoffice.org/stats/crash_details/0aa46b1a-f8ce-40d6-8086-0023ae01cc22
Comment 5 QA Administrators 2022-08-13 03:41:26 UTC Comment hidden (obsolete)
Comment 6 Roman Kuznetsov 2022-08-23 08:27:48 UTC
I can't repro it in our dev build:

Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: bfca51d9035000e518e4938ceb145cb92cc17b1f
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: threaded

Please try reset your LibreOffice's user profile using Help->Restart in Safe mode dialog and then try repeat your problem
Comment 7 Stéphane Guillou (stragu) 2022-08-25 11:47:35 UTC
just checking if it is indeed Windows-specific.

Not reproduced with:

Version: 7.2.7.2 / LibreOffice Community
Build ID: 8d71d29d553c0f7dcbfa38fbfda25ee34cce99a2
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

or with the x11 VCL neither:

Version: 7.2.7.2 / LibreOffice Community
Build ID: 8d71d29d553c0f7dcbfa38fbfda25ee34cce99a2
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: x11
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

In both, when clicking the title, the box simply closes.
Comment 8 M. Aaron Jones 2022-08-27 19:22:22 UTC
Created attachment 182048 [details]
Screenshot of steps

LibreOffice is in safe mode and is the most-recent version.
Comment 9 M. Aaron Jones 2022-08-27 19:23:42 UTC
I restarted in safe mode and the problem is still there. I do not have the most recent version of Windows on my laptop. Please see the attached png file
Comment 10 Buovjaga 2023-01-30 11:35:46 UTC
I repro this both on Linux and windows.

For steps I used what was in the screenshot.

1. Narrow UI, so the chevron appears
2. Click chevron to show Border Color button and click its triangle to show the popdown
3. Click on the title of the popdown

This seems to have appeared somewhere in 7.0, but unfortunately when investigating with linux-64-7.0 there are thousands of commits where the title is not shown! So it might be impossible to bisect.
Comment 11 Buovjaga 2023-01-30 11:36:07 UTC
Created attachment 185012 [details]
GDB trace of crash

Arch Linux 64-bit, X11
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d33dbd8d3bee4dfd614ae0153ebca3db3948e9f8
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 30 January 2023
Comment 12 Commit Notification 2023-01-30 20:12:45 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f4a24366dd111c7c7434f4a887d7097ced6b5f55

tdf#150380 Calc crash clicking on the title of the Border Color toolbar popdown

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Buovjaga 2023-01-31 12:03:21 UTC
Verified, thanks

Arch Linux 64-bit, X11
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a345952daf3238066ecb1a9c67bb6a3640a6299a
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 31 January 2023
Comment 14 Commit Notification 2023-02-09 13:09:48 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/4262e6cca32952ec3d2d130b1c86dc757977d54b

tdf#150380 Calc crash clicking on the title of the Border Color toolbar popdown

It will be available in 7.5.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2023-02-09 13:09:51 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/7192448a9caa2b578db8e70cee73976b91e9d1e2

tdf#150380 Calc crash clicking on the title of the Border Color toolbar popdown

It will be available in 7.4.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2023-02-16 08:38:55 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-5-1":

https://git.libreoffice.org/core/commit/02ecb94a9b522d15501649af00979e9345f90489

tdf#150380 Calc crash clicking on the title of the Border Color toolbar popdown

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.