tdf#150380 Calc crash clicking on the title of the Border Color toolbar popdown

There is probably a better fix for this, but we have a popup inside a
popup here, so some weirdness is to be expected.

At least it doesn't crash now.

Change-Id: Ifaa928c47c3cbfaec8379f01f007b0c1daf4e5a6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146359
Tested-by: Noel Grandin <noel.grandin@collabora.co.uk>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit f4a24366dd111c7c7434f4a887d7097ced6b5f55)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146329
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit 4262e6cca32952ec3d2d130b1c86dc757977d54b)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146713
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
Tested-by: Michael Weghorn <m.weghorn@posteo.de>